some more links

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,17 +1,4 @@
 <h1>Worldwide LGBT Resources</h1>
-<p>
-    Disclaimer:
-    This advice is based on our lived experience, we are not doctors/therapists/lawyers/experts.
-    Any products/companies we list don't reflect Trans Academy as a whole. 
-    Please use your own discretion and research with any advice listed. 
-    Always seek the advice of your qualified health care provider regarding any medical questions. 
-</p>
-
-<div style="width:100%; height:1px; background-color:#000000;"></div>
-
-This resource list is for Lgbtqia specific resources. 
-If you would like to add something to this list, please @Pongo on discord. 
-
 
 <h2> Chapters: </h2>
 <ol>
@@ -35,6 +22,7 @@ If you would like to add something to this list, please @Pongo on discord.
                 </li>
             </ol>
             <li>
+            <!-- TODO: those sections don't exist?! -->
                 <h4 style="margin: 0px;">
                     <a href="./server_guide.html">Resources</a> 
                 </h4>
@@ -127,24 +115,105 @@ If you would like to add something to this list, please @Pongo on discord.
         </ol>
     </li>
     <li>
-        <h3 style="margin: 0px;">Medically Transitioning</h3> 
+        <h3 style="margin: 0px;">
+            <a href="./medically_transitioning.html">
+                Medically Transitioning
+            </a> 
+        </h3> 
         <ol>
+            <!-- TODO: I've trubble finding them in the actual document -->
             <li>
                 <h4 style="margin: 0px;">
-                    HRT - How to guide & safety
+                    <a href="./medically_transitioning.html">
+                        HRT - How to guide & safety
+                    </a> 
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Surgery - Types of procedures, doctors, insurance, grant for funding
+                    <a href="./medically_transitioning.html">
+                        Surgery - Types of procedures, doctors, insurance, grant for funding
+                    </a> 
                 </h4>
+            </li>
+            <!-- TODO: those are mine -->
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./medically_transitioning.html#how_to_injections">
+                        HRT - how to do injections
+                    </a> 
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./medically_transitioning.html#methods_of_hrt">
+                        Methods of HRT
+                    </a> 
+                </h4>
+                <ol>
+                    <li>
+                        <h5 style="margin: 0px;">
+                            <a href="./medically_transitioning.html#hrt_for_trans_masc">
+                                HRT for Trans Masc
+                            </a> 
+                        </h5>
+                    </li>
+                    <li>
+                        <h5 style="margin: 0px;">
+                            <a href="./medically_transitioning.html#hrt_for_trans_fem">
+                                HRT for Trans Fem
+                            </a> 
+                        </h5>
+                    </li>
+                    <li>
+                        <h5 style="margin: 0px;">
+                            <a href="./medically_transitioning.html#hrt_for_nonbinary">
+                                Nonbinary options for HRT
+                            </a> 
+                        </h5>
+                    </li>
+                </ol>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./medically_transitioning.html#surgery">
+                        Surgery
+                    </a> 
+                </h4>
+                <ol>
+                    <li>
+                        <h5 style="margin: 0px;">
+                            <a href="./medically_transitioning.html#affording_surgery">
+                                affording surgery
+                            </a> 
+                        </h5>
+                    </li>
+                    <li>
+                        <h5 style="margin: 0px;">
+                            <a href="./medically_transitioning.html#advice_for_surgery">
+                                Advice for surgery consults
+                            </a> 
+                        </h5>
+                    </li>
+                </ol>
             </li>
         </ol>
     </li>
     <li>
-        <h3 style="margin: 0px;">Finding an LGBT friendly resource</h3>
+        <h3 style="margin: 0px;">
+            <a href="./lgbt_friendly_resources.html">
+                Finding an LGBT friendly resource
+            </a> 
+        </h3>
         <ol>
-            <li><h4 style="margin: 0px;">Doctors & therapists (low income options!)</h4></li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./lgbt_friendly_resources.html#friendly_doctors_and_therapists">
+                        Doctors & therapists (low income options!)
+                    </a> 
+                </h4>
+            </li>
+            <!-- TODO: and where is that business list supposed to be? -->
             <li><h4 style="margin: 0px;">LGBT businesses (Hair salons and more)</h4></li>
         </ol>
     </li>
@@ -193,10 +262,47 @@ If you would like to add something to this list, please @Pongo on discord.
         </ol>
     </li>
     <li>
-        <h3 style="margin: 0px;">Legal Help for LGBT</h3>
+        <h3 style="margin: 0px;">
+            <a href="./legal_help_for_lgbt.html">
+                Legal Help for LGBT
+            </a> 
+        </h3>
         <ol>
-            <li><h4 style="margin: 0px;">US and name & gender marker change</h4></li>
-            <li><h4 style="margin: 0px;">UK,Canada and more countries</h4></li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./legal_help_for_lgbt.html#legal_us">
+                        US
+                    </a> 
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./legal_help_for_lgbt.html#legal_us_name_change">
+                        Name & gender marker change in the US
+                    </a> 
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./legal_help_for_lgbt.html#legal_uk">
+                        UK
+                    </a> 
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./legal_help_for_lgbt.html#legal_ca">
+                        Canada
+                    </a> 
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./legal_help_for_lgbt.html#legal_world">
+                        Other countries
+                    </a> 
+                </h4>
+            </li>
         </ol>
     </li>
     <li>
