--- a/pages/medically_transitioning.html
+++ b/pages/medically_transitioning.html
@@ -1,38 +1,45 @@
+<h1>Medically transitioning</h1>
+
 <p>
-    <b>Medically transitioning</b><br>
-    Always follow your doctor’s recommendations<br>
-    Remember, we are not doctors.<br>
-    <br>
-    What is HRT? Hormone replacement therapy is a medication used to help adjust hormones in the body to better reflect gender identity and/or medical needs. <br>
+    <b>
+        Always follow your doctor’s recommendations<br>
+        Remember, we are not doctors.
+    </b>
+</p>
+
+<p>
+    <u>What is HRT?</u> Hormone replacement therapy is a medication used to help adjust hormones in the body to better reflect gender identity and/or medical needs. <br>
     Anyone can use HRT including transgender, Intersex and even Cis people (folks who are not transgender, and whose gender identity matches their assigned sex at birth). <br>
     <br>
-    What are the effects of HRT?<br>
+    <u>What are the effects of HRT?</u><br>
     for Trans men(testosterone) and Trans women(estrogen): <br>
-    <a href="https://www.gendergp.com/hrt-timelines-hormones-effects/">https://www.gendergp.com/hrt-timelines-hormones-effects/</a><br>
+    <a href="https://www.gendergp.com/hrt-timelines-hormones-effects/">
+        https://www.gendergp.com/hrt-timelines-hormones-effects/
+    </a><br>
     FYI-Both Cis & Trans People can have similar effects from hormone levels side effects.<br>
     Ex: both cis and trans men may or may not be impacted by baldness. <br>
     This can be due to family genetics. <br>
 </p>
+
+<h2 id="how_to_injections">HRT - how to do injections</h2>
+
+<ul>
+    <li>
+        PP-How to inject hrt: 
+        <a href="https://www.plannedparenthood.org/planned-parenthood-western-pennsylvania/patients/introducing-hormone-therapy/hormone-therapy-self-injection-tutorials">
+            https://www.plannedparenthood.org/planned-parenthood-western-pennsylvania/patients/introducing-hormone-therapy/hormone-therapy-self-injection-tutorials
+        </a>
+    </li>
+    <li>
+        PDF version of how to inject hrt: 
+        <a href="https://www.plannedparenthood.org/uploads/filer_public/fc/b0/fcb07ab8-4f33-4e1b-8b15-3754c34e3aae/pplm_gender_affirming_hormone_therapy_injection_guide_2.pdf">
+            https://www.plannedparenthood.org/uploads/filer_public/fc/b0/fcb07ab8-4f33-4e1b-8b15-3754c34e3aae/pplm_gender_affirming_hormone_therapy_injection_guide_2.pdf
+        </a>
+    </li>
+</ul>
+
 <p>
-    <b>HRT-how to do injections</b><br>
-    <ul>
-        <li>
-            PP-How to inject hrt: 
-            <a href="https://www.plannedparenthood.org/planned-parenthood-western-pennsylvania/patients/introducing-hormone-therapy/hormone-therapy-self-injection-tutorials">
-                https://www.plannedparenthood.org/planned-parenthood-western-pennsylvania/patients/introducing-hormone-therapy/hormone-therapy-self-injection-tutorials
-            </a>
-        </li>
-        <li>
-            PDF version of how to inject hrt: 
-            <a href="https://www.plannedparenthood.org/uploads/filer_public/fc/b0/fcb07ab8-4f33-4e1b-8b15-3754c34e3aae/pplm_gender_affirming_hormone_therapy_injection_guide_2.pdf">
-                https://www.plannedparenthood.org/uploads/filer_public/fc/b0/fcb07ab8-4f33-4e1b-8b15-3754c34e3aae/pplm_gender_affirming_hormone_therapy_injection_guide_2.pdf
-            </a>
-        </li>
-    </ul>
-    <br>
-</p>
-<p>
-    Video of step by step Injections & safety:<br>
+    <u>Video of step by step Injections & safety:</u><br>
     <i>TW: needles are shown in videos, for educational purposes.</i><br>
     <ul>
         <li>
@@ -46,96 +53,164 @@
             Subcutaneous Injection: <a href="https://www.youtube.com/watch?v=DJd02xCNNc0&t=54s">https://www.youtube.com/watch?v=DJd02xCNNc0&t=54s</a><br>
         </li>
     </ul>
-    Follow your doctor’s instructions on your vile, ask your doctor which method is best. <br>
+    <b>Follow your doctor’s instructions on your vile, ask your doctor which method is best.</b>
 </p>
 <p>
     Afraid of needles or get weekly shot anxiety?<br>
     Try an auto injector: <a href="https://unionmedico.com/product/super-grip/">https://unionmedico.com/product/super-grip/</a><br>
 </p>
+
+<h2 id="methods_of_hrt">Methods of HRT</h2>
+
 <p>
-    <b>Methods of HRT</b><br>
-    <i>
+    <b>
         * see a doctor or licensed medical professional to start HRT and get regular blood work for your health and safety.<br>
         Everyone’s body is different and unique, what works for you friend might not work for you. Always follow your doctor's instructions!
-    </i> 
+    </b> 
 </p>
+
+<h3 id="hrt_for_trans_masc">HRT for Trans Masc:</h3>
+
 <p>
-    <b>HRT for Trans Masc:</b><br>
     <i>* testosterone doesn't need an estrogen blocker or another med with it.</i><br>
-    (different than fem transition)<br>
-    Injections of Testosterone 1x a week or 2x a month, at home (subq or intramuscular)<br>
-    Medication-pills (testosterone)<br>
-    Patches on skin (testosterone)-if you are allergic to adhesive this might not be for you<br>
-    “Testo-pellets” (testosterone)-in office procedure with numbing<br>
-    “Andro-Gel” for testosterone (or gel for estrogen HRT to rub into skin)-risk to spread to other humans and pets in household<br>
-    Long Term injections 5x a year called “aveed” (testosterone)-ask your doctor about potential risks (mine made me stay 30 mins after shot in case of rare side effect. I was fine)<br>
-    Topical cream for estrogen (atrophy of genitals,not main source)
+    (different than fem transition)
+    <ul>
+        <li>
+            Injections of Testosterone 1x a week or 2x a month, at home (subq or intramuscular)
+        </li>
+        <li>
+            Medication-pills (testosterone)
+        </li>
+        <li>
+            Patches on skin (testosterone) - if you are allergic to adhesive this might not be for you
+        </li>
+        <li>
+            “Testo-pellets” (testosterone) - in office procedure with numbing
+        </li>
+        <li>
+            “Andro-Gel” for testosterone (or gel for estrogen HRT to rub into skin) - risk to spread to other humans and pets in household
+        </li>
+        <li>
+            Long Term injections 5x a year called “aveed” (testosterone) - ask your doctor about potential risks (mine made me stay 30 mins after shot in case of rare side effect. I was fine)
+        </li>
+        <li>
+            Topical cream for estrogen (atrophy of genitals, not main source)
+        </li>
+    </ul>
+
 </p>
+
+<h3 id="hrt_for_trans_fem">HRT for Trans Fem:</h3>
+
 <p>
-    <b>HRT for Trans Fem:</b><br>
     <i>
         * You need Estrogen higher than Testosterone and an anti-androgen to block T. <br>
         Progesterone might be added to treatment later into HRT journey, ask your doctor if this is right for you.<br>
     </i>
-    Medication-pills (estrogen, spironolactone, progesterone)<br>
-    anti-androgen alternatives to Spironolactone are Cyproterone Acetate,Bicalutamide. <br>
-    Patches on skin(estrogen)if you are allergic to adhesive this might not be for you<br>
-    Injections of Estrogen 1x a week or 2x a month, at home (subq or intramuscular)<br>
-    Gel for Estrogen ( HRT to rub into skin)-risk of rubbing off onto other humans or pets in household.<br>
-    Topical creams of HRT (for atrophy of genitals, not main source)<br>
-    Spray and internal rings might also be an option for main source or add on to your hrt.
 </p>
+<ul>
+    <li>
+        Medication-pills (estrogen, spironolactone, progesterone)<br>
+        <ul>
+            <li>
+                anti-androgen alternatives to Spironolactone are Cyproterone Acetate,Bicalutamide. <br>
+            </li>
+        </ul>
+    </li>
+    <li>
+        Patches on skin(estrogen)if you are allergic to adhesive this might not be for you<br>
+    </li>
+    <li>
+        Injections of Estrogen 1x a week or 2x a month, at home (subq or intramuscular)<br>
+    </li>
+    <li>
+        Gel for Estrogen ( HRT to rub into skin)-risk of rubbing off onto other humans or pets in household.<br>
+    </li>
+    <li>
+        Topical creams of HRT (for atrophy of genitals, not main source)<br>
+    </li>
+    <li>
+        Spray and internal rings might also be an option for main source or add on to your hrt.
+    </li>
+</ul>
+
+<h3 id="hrt_for_nonbinary">Nonbinary options for HRT:</h3>
+
 <p>
-    <b>Nonbinary options for HRT:</b><br>
     Lower dose of Estrogen or Testosterone for slower results, can stop if needed.
 </p>
+
+<h2 id="surgery">Surgery</h2> 
+
+<ul>
+    <li>
+        Trans Masc-Surgery options & doctors:<a href="https://www.ftmsurgery.net">https://www.ftmsurgery.net</a> 
+    </li>
+    <li>
+        Nonbinary/Intersex options:<a href="https://salmacian.org">https://salmacian.org</a> 
+    </li>
+    <li>
+        Trans Fem-Surgery options & doctors:<a href="https://www.mtfsurgery.net">https://www.mtfsurgery.net</a> 
+    </li>
+</ul>
+
+<h3 id="affording_surgery">Affording surgery</h3>
 <p>
-    <b>Surgery</b><br>
-    <ul>
-        <li>
-            Trans Masc-Surgery options & doctors:<a href="https://www.ftmsurgery.net">https://www.ftmsurgery.net</a> 
-        </li>
-        <li>
-            Nonbinary/Intersex options:<a href="https://salmacian.org">https://salmacian.org</a> 
-        </li>
-        <li>
-            Trans Fem-Surgery options & doctors:<a href="https://www.mtfsurgery.net">https://www.mtfsurgery.net</a> 
-        </li>
-    </ul>
-</p>
-<p>
-    <b>Affording surgery: </b><br>
+    <!-- TODO: which one -->
     <i>* see our insurance section</i> <br>
-    <b>Grants for surgery:</b><br>
-    <ul>
-        <li>
-            Jim Collins Grant for gender confirming surgery: <a href="https://jimcollinsfoundation.org/apply/">https://jimcollinsfoundation.org/apply/</a>
-        </li>
-        <li>
-            Trans justice fundraiser: <a href="https://www.transjusticefundingproject.org/apply/">https://www.transjusticefundingproject.org/apply/</a>
-        </li>
-        <li>
-            Gender care grant:<a href="https://www.genderbands.org/grants">https://www.genderbands.org/grants</a> 
-        </li>
-        <li>
-            POP Surgery grant:<a href="https://www.pointofpride.org/annual-transgender-surgery-fund">https://www.pointofpride.org/annual-transgender-surgery-fund</a> 
-        </li>
-        <li>
-            Trans United grant:<a href="https://tufforg.wixsite.com/tuffnew/apply">https://tufforg.wixsite.com/tuffnew/apply</a> 
-        </li>
-        <li>
-            Black trans masc top surgery grant:<a href="https://blacktransmen.org/top-surgery-grant/">https://blacktransmen.org/top-surgery-grant/</a> 
-        </li>
-        <li>
-            BIPOC trans masc surgery fund:<a href="https://www.dembois.org/apply-for-a-grant">https://www.dembois.org/apply-for-a-grant</a> 
-        </li>
-    </ul>
 </p>
+
+<h4 id="grants_for_surgery">Grants for surgery:</h4>
+<ul>
+    <li>
+        Jim Collins Grant for gender confirming surgery: 
+        <a href="https://jimcollinsfoundation.org/apply/">
+            https://jimcollinsfoundation.org/apply/
+        </a>
+    </li>
+    <li>
+        Trans justice fundraiser: 
+        <a href="https://www.transjusticefundingproject.org/apply/">
+            https://www.transjusticefundingproject.org/apply/
+        </a>
+    </li>
+    <li>
+        Gender care grant:
+        <a href="https://www.genderbands.org/grants">
+            https://www.genderbands.org/grants
+        </a> 
+    </li>
+    <li>
+        POP Surgery grant:
+        <a href="https://www.pointofpride.org/annual-transgender-surgery-fund">
+            https://www.pointofpride.org/annual-transgender-surgery-fund
+        </a> 
+    </li>
+    <li>
+        Trans United grant:
+        <a href="https://tufforg.wixsite.com/tuffnew/apply">
+            https://tufforg.wixsite.com/tuffnew/apply
+        </a> 
+    </li>
+    <li>
+        Black trans masc top surgery grant:
+        <a href="https://blacktransmen.org/top-surgery-grant/">
+            https://blacktransmen.org/top-surgery-grant/
+        </a> 
+    </li>
+    <li>
+        BIPOC trans masc surgery fund:
+        <a href="https://www.dembois.org/apply-for-a-grant">
+            https://www.dembois.org/apply-for-a-grant
+        </a> 
+    </li>
+</ul>
+
+<h3 id="advice_for_surgery">Advice for surgery consults:</h3>
 <p>
-    <b>Advice for surgery consults:</b><br>
     Do a lot of research before choosing the surgery and doctor.<br>
     Ask your doctor about:
-    <ul>
+    <ol>
         <li>
             how far they are booking out. 
         </li>
@@ -151,15 +226,17 @@
         </li>
         <li>
             Risk of complications, how often it occurs and if hospital stays are common.
-        </li>
-        <li>
-            For Top surgery ask about dog ears (skin/fat under arms needing liposuction)
-        </li>
-        <li>
-            Nerve damage/loss of feeling (all surgery)
-        </li>
-        <li>
-            Loss of pleasure for bottom surgery
+            <ul>
+                <li>
+                    For Top surgery ask about dog ears (skin/fat under arms needing liposuction)
+                </li>
+                <li>
+                    Nerve damage/loss of feeling (all surgery)
+                </li>
+                <li>
+                    Loss of pleasure for bottom surgery
+                </li>
+            </ul>
         </li>
         <li>
             How long they've been doing this type of surgery as a surgeon, if any other surgeons are assisting the surgery
@@ -173,13 +250,16 @@
         </li>
         <li>
             Make sure your insurance and or payment method will work, talk to your doctor and insurance in depth about this.
+            <ul>
+                <li>
+                    Ask about nipple grafts, sometimes they aren't covered (top surgery for trans masc)
+                </li>
+            </ul>
         </li>
-        <li>
-            Ask about nipple grafts, sometimes they aren't covered (top surgery for trans masc)
-        </li>
-    </ul>
+    </ol>
 </p>
 <p>
-    Caregiver guide for after surgery: <br>
+    <u>Caregiver guide for after surgery:</u><br>
+    <!-- missing link -->
     Felix’s Top surgery guide (can be used in general for most surgeries)
 </p>
