worked on social transition & set meta data

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
     <head>
-        <title>My First Web Page</title>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg" href="./img/favicon.svg" />
+        <title>Worldwide Trans Resources</title>
     </head>
     <body>
 <h1>Worldwide LGBT Resources</h1>
@@ -58,6 +60,7 @@ If you would like to add something to this list, please @Pongo on discord.
         </ol>
     </li>
     <li>
+        <!-- TODO: what was the intent here? becacuse thats not how this things work -->
         <h3 style="margin: 0px;">
 <a href="./Socially Transitioning</h3> 
         <ol> 
