--- a/pages/social_transitioning.html
+++ b/pages/social_transitioning.html
@@ -340,6 +340,7 @@
     </li>
 </ul>
 
+<!-- TODO: should we split this off into a dedicated section? Expecially the job stuff -->
 <h2>Experiencing risk of homelessness, lack of food, or other financial needs?</h2>
 
 <h3>Worldwide Help for safe housing (refugees and asylum seekers)</h3>
@@ -656,7 +657,7 @@
 <h3>Jobs, resumes and skill building</h3> 
 
 <p>
-    What job sites are good? 
+    <b>What job sites are good?</b> 
     <a href="https://www.mygwork.com/en/my-g-news/best-websites-for-lgbt-people-to-find-jobs">
         https://www.mygwork.com/en/my-g-news/best-websites-for-lgbt-people-to-find-jobs
     </a><br>
@@ -667,56 +668,91 @@
 </p>
 
 <h4>Job boards</h4>
-<!-- TODO: continue from here -->
-<!-- TODO: make aphaberical ol -->
-<div>
-    <b>Worldwide</b>: <br>
-    <ol>
-        <li>
-            <a href="https://www.jobboard.lgbt/browse-jobs/">https://www.jobboard.lgbt/browse-jobs/</a> 
-        </li>
-        <li>
-            <a href="https://queeroutdoors.net/job-board">https://queeroutdoors.net/job-board</a> 
-        </li>
-        <li>
-            <a href="https://lgbt.net/jobs/">https://lgbt.net/jobs/</a> 
-        </li>
-        <li>
-            <a href="https://www.diversityjobs.com/community-for-lgbtqia/">https://www.diversityjobs.com/community-for-lgbtqia/</a> 
-        </li>
-        <li>
-            <a href="https://campuspride.jobs">https://campuspride.jobs</a> 
-        </li>
-        <li>
-            <a href="https://pink-jobs.com">https://pink-jobs.com</a> 
-        </li>
-    </ol>
-    <b>US & Canada job board</b>: 
-    <a href="https://www.lgbtqcenters.org/Careers">https://www.lgbtqcenters.org/Careers</a>
-</div>
+
+<h5>Worldwide</h5> 
+
+<ol type="A">
+    <li>
+        <a href="https://www.jobboard.lgbt/browse-jobs/">https://www.jobboard.lgbt/browse-jobs/</a> 
+    </li>
+    <li>
+        <a href="https://queeroutdoors.net/job-board">https://queeroutdoors.net/job-board</a> 
+    </li>
+    <li>
+        <a href="https://lgbt.net/jobs/">https://lgbt.net/jobs/</a> 
+    </li>
+    <li>
+        <a href="https://www.diversityjobs.com/community-for-lgbtqia/">https://www.diversityjobs.com/community-for-lgbtqia/</a> 
+    </li>
+    <li>
+        <a href="https://campuspride.jobs">https://campuspride.jobs</a> 
+    </li>
+    <li>
+        <a href="https://pink-jobs.com">https://pink-jobs.com</a> 
+    </li>
+</ol>
+
+<h5>US & Canada job board</h5> 
+
+<ol type="A">
+    <li>
+        <a href="https://www.lgbtqcenters.org/Careers">https://www.lgbtqcenters.org/Careers</a>
+    </li>
+</ol>
+
+<h4>Know your rights in the workplace!</h4>
 
 <p>
-    <b>Know your rights in the workplace!</b><br>
-    US: <a href="https://www.hrc.org/resources/workplace">https://www.hrc.org/resources/workplace</a><br>
-    UK: <a href="https://www.citizensadvice.org.uk/law-and-courts/discrimination/discrimination-because-of-sex-or-sexual-orientation/discrimination-because-of-sexual-orientation/">https://www.citizensadvice.org.uk/law-and-courts/discrimination/discrimination-because-of-sex-or-sexual-orientation/discrimination-because-of-sexual-orientation/</a><br>
-    Canada: <a href="https://www.chrc-ccdp.gc.ca/en/about-human-rights/what-discrimination">https://www.chrc-ccdp.gc.ca/en/about-human-rights/what-discrimination</a><br>
+    US: 
+    <a href="https://www.hrc.org/resources/workplace">
+        https://www.hrc.org/resources/workplace
+    </a><br>
+    UK: 
+    <a href="https://www.citizensadvice.org.uk/law-and-courts/discrimination/discrimination-because-of-sex-or-sexual-orientation/discrimination-because-of-sexual-orientation/">
+        https://www.citizensadvice.org.uk/law-and-courts/discrimination/discrimination-because-of-sex-or-sexual-orientation/discrimination-because-of-sexual-orientation/
+    </a><br>
+    Canada: 
+    <a href="https://www.chrc-ccdp.gc.ca/en/about-human-rights/what-discrimination">
+        https://www.chrc-ccdp.gc.ca/en/about-human-rights/what-discrimination
+    </a><br>
 </p>
+
+<h5>How to ask for accommodations at work</h5>
+
 <p>
-    How to ask for accommodations at work:<br>
-    Check local laws for disability and worker rights<br>
-    After you get your job and are hired(not during an interview), see HR (human resources), or manager if that's not available. <br>
-    Bring them your request and doctors note stating your need, and explain. You don't need to expose your medical history, just explain how your employer can help you. <br>
-    Anyone can get medical accommodations, not just disabled individuals.<br>
-    Example: One weekend you break your foot and land in crutches, you now need a chair to sit in during shift.<br>
-    Example2: You have a lot of doctors appointments coming up and need some time off, you show them doctors note and they allow you extra time off. <br>
+    <ol>
+        <li>
+            Check local laws for disability and worker rights
+        </li>
+        <li>
+            After you get your job and are hired(not during an interview), see HR (human resources), or manager if that's not available.
+        </li>
+        <li>
+            Bring them your request and doctors note stating your need, and explain. You don't need to expose your medical history, just explain how your employer can help you.
+        </li>
+        <li>
+            Anyone can get medical accommodations, not just disabled individuals.<br>
+            Example: One weekend you break your foot and land in crutches, you now need a chair to sit in during shift.<br>
+            Example2: You have a lot of doctors appointments coming up and need some time off, you show them doctors note and they allow you extra time off. <br>
+        </li>
+    </ol>
 </p>
 <p>
     <i>*if you are completely unable to work, ask your local government for information about unemployment and disability income options,etc.</i> <br>
 </p>
+
+<h4>Skill building</h4> 
+
 <p>
-    <b>Skill building:</b><br>
-    Google certificates, Harvard online certificates allow you to learn skills for free or very cheap from the comfort of your home. <br>
-    (computer science,history,art,graphic design and more)
+    
+    <a href="https://www.coursera.org/google-career-certificates?utm_medium=sem&utm_source=gg&utm_campaign=B2C_NAMER__google_FTCOF_google-career-certificates_country-US&campaignid=14390440220&adgroupid=129244555147&device=c&keyword=google%20career%20certificate&matchtype=b&network=g&devicemodel=&adposition=&creativeid=541079811742&hide_mobile_promo&gad_source=1&gclid=CjwKCAjw3NyxBhBmEiwAyofDYWPx2usocAODyKe8mmps-dkV-ylUrMBOqLx1QElZSpaylkWtM8u_RxoCyS4QAvD_BwE">
+        Google certificates
+    </a>, 
+    <a href="https://pll.harvard.edu">
+        Harvard online certificates
+    </a>
+    allow you to learn skills for free or very cheap from the comfort of your home. <br>
+    (computer science, history, art, graphic design and more)
 </p>
 <p>
     Check out the Trans academy discord server events and notices tabs for more information on upcoming classes to help you achieve your goals and learn life skills. 
@@ -728,62 +764,70 @@
 <p>
     This is a free course and goes at your own pace with our instructor. 
 </p>
+
+<h4>Resume Help</h4> 
+
 <p>
-    <b>Resume Help:</b><br>
-    University of Michigan’s Resume Guide: <a href="https://careercenter.umich.edu/article/resume-resources">https://careercenter.umich.edu/article/resume-resources</a><br>
+    University of Michigan’s Resume Guide: 
+    <a href="https://careercenter.umich.edu/article/resume-resources">
+        https://careercenter.umich.edu/article/resume-resources
+    </a><br>
 </p>
 <p>
     <i>
-        * Tip: Make sure your social media is set to private so employers looking up your name in background checks don't find anything inappropriate,nsfw,controversial,etc. <br>
-        -Create a resume on Linked in, a website used for employers to find employees and people to see what business connections others have. 
+        * Tip: Make sure your social media is set to private so employers looking up your name in background checks don't find anything inappropriate, nsfw, controversial, etc. <br>
+        Create a resume on Linked in, a website used for employers to find employees and people to see what business connections others have. 
     </i>
 </p>
+    
+<h4>Job interviews</h4>
+
+<h5>What to say</h5>
+<ul>
+    <li>
+        be polite and collected,smiling and laughing will help your case. 
+    </li>
+    <li>
+        Mentioning that you love XYZ about their company shows them you've read about them, or are already familiar with how they work.
+    </li>
+</ul>
+
+<h5>What to wear</h5>
+
 <p>
-    <b>Job interviews:</b><br>
-    <br>
-    What to say - 
-    <ul>
-        <li>
-            be polite and collected,smiling and laughing will help your case. 
-        </li>
-        <li>
-            Mentioning that you love XYZ about their company shows them you've read about them, or are already familiar with how they work.
-        </li>
-    </ul>
-    What to wear -<br>
-    <ul>
-        <li>
-            Wear something business casual. No need for a tie or heels, but dont showup in sweat pants or something dirty. <br>
-            Wearing a nice, well fitted and clean outfit shows that you will also show up to work ready in uniform each day. <br>
-            You want to appear professional and put together.
-        </li>
-    </ul>
+    Wear something business casual. No need for a tie or heels, but dont showup in sweat pants or something dirty. <br>
+    Wearing a nice, well fitted and clean outfit shows that you will also show up to work ready in uniform each day. <br>
+    You want to appear professional and put together.
+</p>
+<p>
     <i> 
         * If you don't have an interview outfit, consider borrowing a shirt from a friend, going to a thrift store, or asking a local charity for job interview clothes. <br>
         Many charities are more than willing to help someone unemployed with this. Also some even help with job uniform cost. <br>
     </i>
-    Tips - <br>
-    <ul>
-        <li>
-            - Some questions are illegal for an interviewer to ask you. <br>
-            They shouldn't ask about your race,religion,sexuality or gender identity. Only things relating to the job.<br>
-            See what is allowed: 
-            <a href="https://www.bridgespan.org/insights/nonprofit-hiring-toolkit/conducting-successful-interviews/legal-and-illegal-interview-questions">
-                https://www.bridgespan.org/insights/nonprofit-hiring-toolkit/conducting-successful-interviews/legal-and-illegal-interview-questions
-            </a>
-        </li>
-        <li>
-            Remember you are also interviewing the company too! <br>
-            Deciding if this job is also the right fit for you, your schedule and needs. 
-        </li>
-        <li>
-            Calling/emailing the company a few days after applying to check on the application shows that you are excited about that job position (even if you aren't-fake it)
-        </li>
-        <li>
-            Showing up early to the interview shows them that you are responsible and will show up to work on time.
-        </li>
-    </ul>
 </p>
+<h5>Tips</h5>
+
+<ul>
+    <li>
+        Some questions are illegal for an interviewer to ask you. <br>
+        They shouldn't ask about your race,religion,sexuality or gender identity. Only things relating to the job.<br>
+        See what is allowed: 
+        <a href="https://www.bridgespan.org/insights/nonprofit-hiring-toolkit/conducting-successful-interviews/legal-and-illegal-interview-questions">
+            https://www.bridgespan.org/insights/nonprofit-hiring-toolkit/conducting-successful-interviews/legal-and-illegal-interview-questions
+        </a>
+    </li>
+    <li>
+        Remember you are also interviewing the company too! <br>
+        Deciding if this job is also the right fit for you, your schedule and needs. 
+    </li>
+    <li>
+        Calling/emailing the company a few days after applying to check on the application shows that you are excited about that job position (even if you aren't-fake it)
+    </li>
+    <li>
+        Showing up early to the interview shows them that you are responsible and will show up to work on time.
+    </li>
+</ul>
+
 <p>
     <b>College financial aid options:</b><br>
     <ul>
