--- a/pages/social_transitioning.html
+++ b/pages/social_transitioning.html
@@ -811,7 +811,7 @@
     <li>
         Some questions are illegal for an interviewer to ask you. <br>
         They shouldn't ask about your race,religion,sexuality or gender identity. Only things relating to the job.<br>
-        See what is allowed: 
+        See what is allowed: <br>
         <a href="https://www.bridgespan.org/insights/nonprofit-hiring-toolkit/conducting-successful-interviews/legal-and-illegal-interview-questions">
             https://www.bridgespan.org/insights/nonprofit-hiring-toolkit/conducting-successful-interviews/legal-and-illegal-interview-questions
         </a>
@@ -828,32 +828,46 @@
     </li>
 </ul>
 
+<h4>College financial aid options (US)</h4>
+
 <p>
-    <b>College financial aid options:</b><br>
     <ul>
         <li>
-            US - In the US we use FAFSA or the government’s financial aid program for helping with college via loans (you pay back). <br>
+            In the US we use FAFSA or the government’s financial aid program for helping with college via loans (you pay back). <br>
             Even if you or your family have jobs and are well off, you still might qualify for some amount of financial aid. <br>
             Those who have no family help, are homeless,disabled, or were a foster kid might be eligible for more financial aid then others. <br>
             FAFSA: <a href="https://studentaid.gov/h/apply-for-aid/fafsa">https://studentaid.gov/h/apply-for-aid/fafsa</a><br>
         </li>
+        <li>
+            <a href="https://campusprideindex.org">
+                Pride index for college campus(find lgbt friendly school)
+            </a>
+        </li>
     </ul>
-    Pride index for college campus(find lgbt friendly school)<br>
-    <br>
-    There are also many scholarships you can apply for that you don't need to pay back!<br>
-    <br>
-    <b>Low income scholarships:</b>
+    <u>There are also many scholarships you can apply for that you don't need to pay back!</u>
     <ul>
         <li>
-            <a href="https://horatioalger.org/scholarships/ ">https://horatioalger.org/scholarships/ </a>(65k or less,as well as other criteria)<br>
+            Low income scholarships:
+            <a href="https://horatioalger.org/scholarships/ ">
+                https://horatioalger.org/scholarships/ </a>
+            (65k or less,as well as other criteria)
         </li>
         <li>
-            LGBT scholarships: <a href="https://www.hrc.org/resources/scholarships">https://www.hrc.org/resources/scholarships</a><br>
-            <a href="https://pointfoundation.org/scholarships">https://pointfoundation.org/scholarships</a> (LGBT and BIPOC)
+            LGBT scholarships: 
+            <ul>
+                <li>
+                    <a href="https://www.hrc.org/resources/scholarships">https://www.hrc.org/resources/scholarships</a>
+                </li>
+                <li>
+                    <a href="https://pointfoundation.org/scholarships">https://pointfoundation.org/scholarships</a> (LGBT and BIPOC)
+                </li>
+            </ul>
         </li>
         <li>
-            Easy to apply scholarships (no essays,no gpa,etc): 
-            <a href="https://www.niche.com/colleges/scholarships/?easy=easy-scholarships">https://www.niche.com/colleges/scholarships/?easy=easy-scholarships</a>
+            Easy to apply scholarships (no essays, no gpa, etc): 
+            <a href="https://www.niche.com/colleges/scholarships/?easy=easy-scholarships">
+                https://www.niche.com/colleges/scholarships/?easy=easy-scholarships
+            </a>
         </li>
         <li>
             Black student scholarships:
