--- a/pages/index.html
+++ b/pages/index.html
@@ -40,75 +40,141 @@
         </ol>
     </li>
     <li>
-        <h3 style="margin: 0px;">Socially Transitioning</h3> 
+        <h3 style="margin: 0px;">
+            <a href="./social_transitioning.html">
+                Socially Transitioning
+            </a>
+        </h3> 
         <ol> 
-            <li><h4 style="margin: 0px;">Passing</h4></li>
-            <li><h4 style="margin: 0px;">Positivity and Hope</h4></li>
-            <li><h4 style="margin: 0px;">Voice Training</h4></li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./social_transitioning.html#passing">
+                        Passing
+                    </a>
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./social_transitioning.html#positivity_and_hope">
+                        Positivity and Hope
+                    </a>
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./social_transitioning.html#vocal_training">
+                        Voice Training
+                    </a>
+                </h4>
+            </li>
             <ol> 
-                <li><h5 style="margin: 0px;">Trans academy voice classes</h5></li>
-                <li><h5 style="margin: 0px;">Voice training resource list</h5></li>
-                <li><h5 style="margin: 0px;">Voice training app</h5></li>
+                <li>
+                    <!-- TODO: this menu item doesn't make much sense, 
+                        in general: an index update would be needed -->
+                    <h5 style="margin: 0px;">
+                        <a href="./social_transitioning.html#vocal_training">
+                            Trans academy voice classes
+                        </a>
+                    </h5>
+                </li>
+                <li>
+                    <h5 style="margin: 0px;">
+                        <a href="./social_transitioning.html#vocal_training">
+                            Voice training resource list
+                        </a>
+                    </h5>
+                </li>
+                <li>
+                    <h5 style="margin: 0px;">
+                        <a href="./social_transitioning.html#voice_training_apps">
+                            Voice training app
+                        </a>
+                    </h5>
+                </li>
             </ol>
             <li>
                 <h4 style="margin: 0px;">
-                    Navigating Coming Out & Family support
+                    <a href="./social_transitioning.html#comming_out_to_family">
+                        Navigating Coming Out & Family support
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    How to use Pronouns
+                    <a href="./social_transitioning.html#pronoun_use_and_mistakes">
+                        How to use Pronouns
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Support groups & Ally resources
+                    <a href="./social_transitioning.html#guide_for_trans_and_info_for_allies">
+                        Support groups & Ally resources
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Help navigating Homelessness & financial concerns
+                    <a href="./social_transitioning.html#homelessness_and_financials">
+                        Help navigating Homelessness & financial concerns
+                    </a>
                 </h4>
             </li>
             <ol> 
                 <li>
                     <h5 style="margin: 0px;">
-                        Asylum and refugees, worldwide getting to safety
+                        <a href="./social_transitioning.html#worldwide_housing_refugees_and_asylum">
+                            Asylum and refugees, worldwide getting to safety
+                        </a>
                     </h5>
                 </li>
                 <li>
                     <h5 style="margin: 0px;">
-                        LGBT moving funds for safety
+                        <a href="./social_transitioning.html#refugees_and_asylum_to_us">
+                            LGBT moving funds for safety
+                        </a>
                     </h5>
                 </li>
                 <li>
                     <h5 style="margin: 0px;">
-                        Housing
+                        <a href="./social_transitioning.html#us_housing">
+                            Housing
+                        </a>
                     </h5>
                 </li>
                 <li>
                     <h5 style="margin: 0px;">
-                        Youth-runaway crisis lines
+                        <a href="./social_transitioning.html#lgbt_youth_homelessness">
+                            Youth-runaway crisis lines
+                        </a>
                     </h5>
                 </li>
                 <li>
                     <h5 style="margin: 0px;">
-                        Food
+                        <a href="./social_transitioning.html#us_food">
+                            Food
+                        </a>
                     </h5>
                 </li>
                 <li>
                     <h5 style="margin: 0px;">
-                        Wifi and internet access
+                        <a href="./social_transitioning.html#wifi_internet_help">
+                            Wifi and internet access
+                        </a>
                     </h5>
                 </li>
                 <li>
                     <h5 style="margin: 0px;">
-                        How to find low cost health insurance,grants for funding
+                        <a href="./social_transitioning.html#health_insurances">
+                            How to find low cost health insurance, grants for funding
+                        </a>
                     </h5>
                 </li>
                 <li>
                     <h5 style="margin: 0px;">
-                        Job skills, resumes, interviews, College scholarships and more
+                        <a href="./social_transitioning.html#jobs_resumes_and_skill_building">
+                            Job skills, resumes, interviews, College scholarships and more
+                        </a>
                     </h5>
                 </li>
             </ol>
