--- a/pages/social_transitioning.html
+++ b/pages/social_transitioning.html
@@ -28,7 +28,7 @@
     </li>
 </ul>
 
-<h2>Passing</h2>
+<h2 id="passing">Passing</h2>
 
 <p>
     Passing means to be perceived as your gender identity and not your sex assigned at birth. <br>
@@ -37,7 +37,7 @@
     It's not necessary to pass, but it is some trans folks’ goal during transition.
 </p>
 
-<h3>Positivity and hope</h3>
+<h3 id="positivity_and_hope">Positivity and hope</h3>
 
 <ul>
     <li>
@@ -62,7 +62,7 @@
 <p>
 </p>
 
-<h2>Vocal training</h2>
+<h2 id="vocal_training">Vocal training</h2>
 
 <p>
     Have you been to a voice class here yet? Its not only for feminization, but also masculinization. <br>
@@ -83,7 +83,7 @@
     </a>
 </p>
 
-<h3>Voice tips and tricks</h3>
+<h3 id="voice_tips_and_tricks">Voice tips and tricks</h3>
 
 
 <p>
@@ -100,7 +100,7 @@
 </p>
 
 
-<h3>Voice training app</h3>
+<h3 id="voice_training_apps">Voice training app</h3>
 
 <p>
     “Voice Tools”- free app to track vocal range and track progress.<br>
@@ -121,7 +121,7 @@
     <i>*You can also turn off the gendered ranges*</i>
 </p>
 
-<h2>Coming out to Family</h2>
+<h2 id="comming_out_to_family">Coming out to Family</h2>
 
 <p>
     <b><i>"those who matter don't mind, and those who mind don't matter."</i></b> 
@@ -158,7 +158,7 @@
     </ul>
 </p>
 
-<h3>Pronoun use & mistakes guide for Allys</h3>
+<h3 id="pronoun_use_and_mistakes">Pronoun use & mistakes guide for Allys</h3>
 
 <ul>
     <li>
@@ -186,7 +186,7 @@
     </li>
 </ul>
 
-<h3>Guide for Trans folks & info for allys</h3>
+<h3 id="guide_for_trans_and_info_for_allies">Guide for Trans folks & info for allies</h3>
 
 <ul>
     <li>
@@ -237,7 +237,7 @@
 </ul>
 
 <!-- TODO: what is that? a h3? a h2? a new sections? -->
-<h4>Canada</h4>
+<h4 id="guide_for_trans_and_info_for_allies_ca">Canada</h4>
 <p>
     <ul>
         <li>
@@ -279,7 +279,7 @@
 </p>
 
 
-<h4>Support groups</h4>
+<h4 id="guide_for_trans_and_info_for_allies_support">Support groups</h4>
 
 <ul>
     <li>
@@ -341,9 +341,9 @@
 </ul>
 
 <!-- TODO: should we split this off into a dedicated section? Expecially the job stuff -->
-<h2>Experiencing risk of homelessness, lack of food, or other financial needs?</h2>
+<h2 id="homelessness_and_financials">Experiencing risk of homelessness, lack of food, or other financial needs?</h2>
 
-<h3>Worldwide Help for safe housing (refugees and asylum seekers)</h3>
+<h3 id="worldwide_housing_refugees_and_asylum">Worldwide Help for safe housing (refugees and asylum seekers)</h3>
 
 <ul>
     <li>
@@ -372,7 +372,7 @@
     </li>
 </ul>
 
-<h3>Moving to the US</h3>
+<h3 id="refugees_and_asylum_to_us">Moving to the US</h3>
 
 <ul>
     <li>
@@ -415,7 +415,7 @@
 
 <h3>US</h3>
 
-<h4>Housing</h4>
+<h4 id="us_housing">Housing</h4>
 
 <p>
     Nationwide resources:
@@ -474,8 +474,8 @@
     </ul>
 </p>
 
+<h5 id="lgbt_youth_homelessness">LGBT Youth homelessness</h5> 
 <p>
-    <u>LGBT Youth homelessness</u>:
     <ul>
         <li>
             <a href="https://www.thetrevorproject.org/resources/article/resources-for-lgbtq-youth-experiencing-homelessness/">
@@ -491,7 +491,7 @@
     </ul>
 </p>
 
-<h4>Food</h4>
+<h4 id="us_food">Food</h4>
 
 <h5> US </h5>
 
@@ -527,7 +527,7 @@
     </ul>
 </p>
 
-<h3>Wifi/internet help</h3>
+<h3 id="wifi_internet_help">Wifi/internet help</h3>
 
 <p>
     Why is the internet important?<br>
@@ -559,7 +559,7 @@
     </li>
 </ul>
 
-<h3>How to find health insurance</h3>
+<h3 id="health_insurances">How to find health insurance</h3>
 
 <p>
     <b>US</b> Low income options include: 
@@ -654,7 +654,7 @@
     </ul>
 </p>
 
-<h3>Jobs, resumes and skill building</h3> 
+<h3 id="jobs_resumes_and_skill_building">Jobs, resumes and skill building</h3> 
 
 <p>
     <b>What job sites are good?</b> 
