trans creators linked up

--- a/pages/index.html
+++ b/pages/index.html
@@ -284,25 +284,47 @@
         </ol>
     </li>
     <li>
-        <h3 style="margin: 0px;">Transgender Representation</h3>
+        <h3 style="margin: 0px;">
+            <a href="./trans_representation.html">
+                Transgender Representation
+            </a>
+        </h3>
         <ol>
-            <li><h4 style="margin: 0px;">Trans masc</h4></li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./trans_representation.html#creators_trans_masc">
+                        Trans masc
+                    </a>
+                </h4>
+            </li>
             <ol>
-                <li><h5 style="margin: 0px;">Trace app for tracking transition</h5></li>
+                <li>
+                    <h5 style="margin: 0px;">
+                        <a href="./trans_representation.html#aydian_dowling">
+                            Trace app for tracking transition
+                        </a>
+                    </h5>
+                </li>
             </ol>
             <li>
                 <h4 style="margin: 0px;">
-                    Trans fem
+                    <a href="./trans_representation.html#creators_trans_fem">
+                        Trans fem
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Nonbinary
+                    <a href="./trans_representation.html#creators_nonbinary">
+                        Nonbinary
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Books on lgbt, books for kids
+                    <a href="./trans_representation.html#books_lgbt_kids">
+                        Books on lgbt, books for kids
+                    </a>
                 </h4>
             </li>
         </ol>
