--- a/pages/trans_representation.html
+++ b/pages/trans_representation.html
@@ -1,160 +1,261 @@
+<h1>Transgender Representation</h1>
+
+<!-- TODO: should be adjust the hirachy? like a section for social media, one for books, one for ...
+    or maybe one for trans fem, trans masc, ... with sub categories with books, social, ... ? -->
+<h2 id="creators_trans_fem">Trans fem creators</h2>
+
+<ul>
+    <!-- TODO: are there any requirenments? where are contrapoints, mia mulder, jessy early, philosophy tube, ...? -->
+    <li>
+        Laverne Cox:
+        <a href="https://www.instagram.com/lavernecox/">
+            https://www.instagram.com/lavernecox/
+        </a> 
+    </li>
+    <li>
+        Dylan Mulvaney:
+        <a href="https://www.instagram.com/dylanmulvaney/">
+            https://www.instagram.com/dylanmulvaney/</a> 
+    </li>
+    <li>
+        Jazz Jennings:
+        <a href="https://www.instagram.com/jazzjennings_/?hl=en">
+            https://www.instagram.com/jazzjennings_/?hl=en
+        </a> 
+    </li>
+    <li>
+        Erin:
+        <a href="https://www.erininthemorning.com">
+            https://www.erininthemorning.com
+        </a> 
+    </li>
+</ul>
+
+<h2 id="creators_nonbinary">Nonbinary creators</h2> 
+
+<ul>
+    <li>
+        Sam smith:
+        <a href="https://www.instagram.com/samsmith/?hl=en">
+            https://www.instagram.com/samsmith/?hl=en
+        </a> 
+    </li>
+    <li>
+        Jonathan van ness:
+        <a href="https://www.instagram.com/jvn/?hl=en">
+            https://www.instagram.com/jvn/?hl=en
+        </a> 
+    </li>
+    <li>
+        King Princess:
+        <a href="https://www.instagram.com/kingprincess69/?hl=en">
+            https://www.instagram.com/kingprincess69/?hl=en
+        </a> 
+    </li>
+    <li>
+        Cara Delevigne:
+        <a href="https://www.instagram.com/caradelevingne/?hl=en">
+            https://www.instagram.com/caradelevingne/?hl=en
+        </a> 
+    </li>
+    <li>
+        Vico Ortiz:
+        <a href="https://www.instagram.com/puertoricaninja/?hl=en">
+            https://www.instagram.com/puertoricaninja/?hl=en
+        </a> 
+    </li>
+</ul>
+
+<h2 id="creators_trans_masc">Trans Masc Creators</h2> 
+
+<ul>
+    <li>
+        Ty Turner:
+        <a href="https://www.youtube.com/@TyTurner">
+            https://www.youtube.com/@TyTurner
+        </a> 
+    </li>
+    <li>
+        Jammi Dodger: 
+        <a href="https://www.youtube.com/@Jammidodger">
+            https://www.youtube.com/@Jammidodger
+        </a>
+    </li>
+    <li>
+        Devon Spears:
+        <a href="https://www.youtube.com/@DevonSpears">
+            https://www.youtube.com/@DevonSpears
+        </a> 
+    </li>
+    <li>
+        Micah:
+        <a href="https://www.youtube.com/@RealisticallyFree">
+            https://www.youtube.com/@RealisticallyFree
+        </a> 
+    </li>
+    <li>
+        Matt Turner:
+        <a href="https://www.youtube.com/@MattTurner5">
+            https://www.youtube.com/@MattTurner5
+        </a> 
+    </li>
+    <li>
+        Malcom:
+        <a href="https://www.instagram.com/gorillashrimp/">
+            https://www.instagram.com/gorillashrimp/
+        </a> 
+    </li>
+    <li>
+        Ftm Magazine:
+        <a href="https://www.instagram.com/ftmmagazine/">
+            https://www.instagram.com/ftmmagazine/
+        </a> 
+    </li>
+    <li>
+        Bennett:
+        <a href="https://www.instagram.com/bennettonpurpose/">
+            https://www.instagram.com/bennettonpurpose/
+        </a> 
+    </li>
+    <li>
+        Danny:
+        <a href="https://www.instagram.com/dannythetransdad/?hl=en">
+            https://www.instagram.com/dannythetransdad/?hl=en
+        </a> 
+    </li>
+    <li>
+        Sherman:
+        <a href="https://www.instagram.com/shermangiftbasket/">
+            https://www.instagram.com/shermangiftbasket/
+        </a> 
+    </li>
+    <li id="aydian_dowling">
+        Aydian Dowling:
+        <a href="https://www.instagram.com/alionsfear/">
+            https://www.instagram.com/alionsfear/
+        </a><br>
+        Aydian Dowling (alionsfear) created “the trace app”: <br>
+        This lets you track your transition, and share it with others! (IOS/Android) <br>
+        <a href="https://linktr.ee/thetrace.app">
+            https://linktr.ee/thetrace.app
+        </a> 
+    </li>
+</ul>
+
 <p>
-    <b>Transgender Representation</b> 
+    <a href="https://transmascfutures.inreach.org">
+        Inreach/Glaad project: Trans masc stories from around the world
+    </a>
 </p>
-<p>
-    <b>Trans fem creators:</b> 
-    <ul>
-        <li>
-            Laverne Cox:<a href="https://www.instagram.com/lavernecox/">https://www.instagram.com/lavernecox/</a> 
-        </li>
-        <li>
-            Dylan Mulvaney:<a href="https://www.instagram.com/dylanmulvaney/">https://www.instagram.com/dylanmulvaney/</a> 
-        </li>
-        <li>
-            Jazz Jennings:<a href="https://www.instagram.com/jazzjennings_/?hl=en">https://www.instagram.com/jazzjennings_/?hl=en</a> 
-        </li>
-        <li>
-            Erin:<a href="https://www.erininthemorning.com">https://www.erininthemorning.com</a> 
-        </li>
-    </ul>
-</p>
-<p>
-    <b>Nonbinary creators:</b> 
-    <ul>
-        <li>
-            Sam smith:<a href="https://www.instagram.com/samsmith/?hl=en">https://www.instagram.com/samsmith/?hl=en</a> 
-        </li>
-        <li>
-            Jonathan van ness:<a href="https://www.instagram.com/jvn/?hl=en">https://www.instagram.com/jvn/?hl=en</a> 
-        </li>
-        <li>
-            King Princess:<a href="https://www.instagram.com/kingprincess69/?hl=en">https://www.instagram.com/kingprincess69/?hl=en</a> 
-        </li>
-        <li>
-            Cara Delevigne:<a href="https://www.instagram.com/caradelevingne/?hl=en">https://www.instagram.com/caradelevingne/?hl=en</a> 
-        </li>
-        <li>
-            Vico Ortiz:<a href="https://www.instagram.com/puertoricaninja/?hl=en">https://www.instagram.com/puertoricaninja/?hl=en</a> 
-        </li>
-    </ul>
-</p>
-<p>
-    <b>Trans Masc Creators:</b> 
-    <ul>
-        <li>
-            Ty Turner:<a href="https://www.youtube.com/@TyTurner">https://www.youtube.com/@TyTurner</a> 
-        </li>
-        <li>
-            Jammi Dodger: <a href="https://www.youtube.com/@Jammidodger"> https://www.youtube.com/@Jammidodger</a>
-        </li>
-        <li>
-            Devon Spears:<a href="https://www.youtube.com/@DevonSpears">https://www.youtube.com/@DevonSpears</a> 
-        </li>
-        <li>
-            Micah:<a href="https://www.youtube.com/@RealisticallyFree">https://www.youtube.com/@RealisticallyFree</a> 
-        </li>
-        <li>
-            Matt Turner:<a href="https://www.youtube.com/@MattTurner5">https://www.youtube.com/@MattTurner5</a> 
-        </li>
-        <li>
-            Malcom:<a href="https://www.instagram.com/gorillashrimp/">https://www.instagram.com/gorillashrimp/</a> 
-        </li>
-        <li>
-            Ftm Magazine:<a href="https://www.instagram.com/ftmmagazine/">https://www.instagram.com/ftmmagazine/</a> 
-        </li>
-        <li>
-            Bennett:<a href="https://www.instagram.com/bennettonpurpose/">https://www.instagram.com/bennettonpurpose/</a> 
-        </li>
-        <li>
-            Danny:<a href="https://www.instagram.com/dannythetransdad/?hl=en">https://www.instagram.com/dannythetransdad/?hl=en</a> 
-        </li>
-        <li>
-            Sherman:<a href="https://www.instagram.com/shermangiftbasket/">https://www.instagram.com/shermangiftbasket/</a> 
-        </li>
-        <li>
-            Aydian Dowling:<a href="https://www.instagram.com/alionsfear/">https://www.instagram.com/alionsfear/</a> 
-        </li>
-    </ul>
-    <br>
-    Aydian Dowling(alionsfear) created “the trace app”: <br>
-    This lets you track your transition, and share it with others! (IOS/Android) <br>
-    <a href="https://linktr.ee/thetrace.app ">https://linktr.ee/thetrace.app </a> 
-</p>
-<p>
-    Inreach/Glaad project: Trans masc stories from around the world<br>
-</p>
-<p>
-    <b>Trans Masc Books:</b><br>
-    <a href="https://www.ftmguide.org/books.html">https://www.ftmguide.org/books.html</a><br>
-    Some Assembly required By: Arin Andrews (book about being ftm) 
-</p>
-<p>
-    <b>Books about LGBT:</b>
-    <ul>
-        <li>
+
+<h2 id="books_trans_masc">Trans Masc Books</h2>
+
+<ul>
+    <li>
+        <a href="https://www.ftmguide.org/books.html">
+            https://www.ftmguide.org/books.html
+        </a>
+    </li>
+    <li>
+
+        <a href="https://www.google.com/shopping/product/7515793074789903731?q=lgbt+books+for+kids+trans&client=opera-gx&hs=poY&sca_esv=d7773eb477db942c&biw=1495&bih=715&dpr=1.25&prds=eto:666606830055741858_0,pid:547419386285660253,rsk:PC_10865885491087945623&sa=X&ved=0ahUKEwj3jZzPhP-FAxXSkIkEHTJBCJQ4PBDzAgj5FQ">
+            Some Assembly required By: Arin Andrews (book about being ftm)
+        </a>
+    </li>
+</ul>
+
+<!-- TODO: should the legible information include all the details to find the book in book stores, or should we stick to just a link and title? -->
+<!-- TODO: update amanzon links to "real links" instead of browser copy -->
+
+<h2 id="books_LGBT">Books about LGBT</h2>
+
+<ul>
+    <li>
+        <a href="https://www.amazon.com/Trans-Bodies-Selves-Transgender-Communities/dp/0190092726/ref=d_pd_sbs_vft_none_sccl_2_5/143-3770184-9337616?psc=1">
             Trans Bodies,Trans Selves by:Laura Erickson-Schroth
-        </li>
-        <li>
+        </a>
+    </li>
+    <li>
+        <a href="https://www.goodreads.com/book/show/54935.She_s_Not_There">
             Shes not there, a life in two genders by: Jennifer Finney Boylan
-        </li>
-        <li>
+        </a>
+    </li>
+    <li>
+        <a href="https://www.goodreads.com/book/show/35290626-to-my-trans-sisters">
             To my trans sisters by Charlie Craggs
-        </li>
-        <li>
+        </a>
+    </li>
+    <li>
+        <a href="https://www.amazon.com/ABCs-LGBT-Ashley-Mardell/dp/163353409X">
             The Abc’s of LGBT by Ashley Mardell (ash hardell on youtube)
-        </li>
-        <li>
-            Beyond Magenta- transgender teens speak out by: Susan Kuklin
-        </li>
-        <li>
-            The full spectrum,Lgbt collection of stories by young writers. By: David Levithan & Billy Merrell
-        </li>
-    </ul>
-</p>
-<p>
-    <b>LGBT Books for kids:</b>
-    <ul>
-        <li>
-            <b>Lgbt education:</b> 
-            <ul>
-                <li>
-                    Kinda like Marsha (lgbt leaders) by Sarah Prager
-                </li>
-            </ul>
-        </li>
-        <li>
-            <b>Being an lgbt kid:</b> 
-            <ul>
-                <li>
-                    I am jazz by: Jessica Herthel, Jazz Jennings
-                </li>
-                <li>
-                    Pink is for boys by: Robb Pearlman
-                </li>
-                <li>
-                    Julian is a mermaid by: Jessica Love
-                </li>
-                <li>
-                    My shadow is Purple by: Scott Stuart
-                </li>
-                <li>
-                    Sparkle boy by: Leslea Newman
-                </li>
-            </ul>
-        </li>
-        <li>
-            <b>Lgbt families:</b> 
-            <ul>
-                <li>
-                    And that’s their family by: Kailee Coleman
-                </li>
-                <li>
-                    In my daddy’s belly by: Logan Brown
-                </li>
-            </ul>
-        </li>
-    </ul>
-</p>
-<p>
-    __________________________________________________________________
-</p>
+        </a>
+    </li>
+    <li>
+        <a href="https://www.google.com/shopping/product/9781759410452685831?q=lgbt+books+for+kids+trans&client=opera-gx&hs=L9D&sca_esv=d7773eb477db942c&uact=5&oq=lgbt+books+for+kids+trans&gs_lp=Egtwcm9kdWN0cy1jYyIZbGdidCBib29rcyBmb3Iga2lkcyB0cmFuc0jSElDIAljWEHAAeACQAQCYAW2gAYsHqgEDOS4xuAEDyAEA-AEBmAIBoAJNwgIGEAAYFhgemAMAiAYBkgcBMaAHoAQ&sclient=products-cc&prds=eto:4401267754234848566_0,pid:7884259539422028173,rsk:PROD_VAR_9781759410452685831&sa=X&ved=0ahUKEwidhIGcgv-FAxXxk4kEHen_De8Q8wII6xc">
+            Beyond Magenta - transgender teens speak out by: Susan Kuklin
+        </a>
+    </li>
+    <li>
+        <a href="https://www.google.com/shopping/product/1427813354972492355?q=lgbt+books+for+kids+trans&client=opera-gx&hs=poY&sca_esv=d7773eb477db942c&biw=1495&bih=715&dpr=1.25&prds=eto:17383995791758558722_0,pid:1201779808403662399&sa=X&ved=0ahUKEwj3jZzPhP-FAxXSkIkEHTJBCJQ4PBDzAgjZDw">
+            The full spectrum, Lgbt collection of stories by young writers. By: David Levithan & Billy Merrell
+        </a>
+    </li>
+</ul>
+
+<h2 id="books_lgbt_kids">LGBT Books for kids</h2>
+
+
+<h3 id="books_kids_lgbt_education">Lgbt education</h3> 
+
+<ul>
+    <li>
+        <a href="https://www.amazon.com/Kind-Like-Marsha-Learning-Leaders/dp/0762475005/ref=asc_df_0762475005/?tag=hyprod-20&linkCode=df0&hvadid=693033695499&hvpos=&hvnetw=g&hvrand=13994383426014531176&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1027855&hvtargid=pla-1637203031400&psc=1&mcid=8a44e8fe2d7e3e448864c999ce842441&gad_source=1&gclid=Cj0KCQjwxeyxBhC7ARIsAC7dS39WyFxJ2GkuiByRqJ9NmvduGmQrQrd2dckeKAuCV1Nwz9Vr053X7EIaAgPHEALw_wcB">
+            Kinda like Marsha (lgbt leaders) by Sarah Prager
+        </a>
+    </li>
+</ul>
+
+<h3 id="books_kids_being">Being an lgbt kid</h3> 
+
+<ul>
+    <li>
+        <a href="https://www.amazon.com/I-Am-Jazz-Jessica-Herthel/dp/0803741073/ref=asc_df_0803741073/?tag=hyprod-20&linkCode=df0&hvadid=693324227737&hvpos=&hvnetw=g&hvrand=5480554112451686960&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1027855&hvtargid=pla-433837990947&psc=1&mcid=186ac547234f3ee4afff9811e9ac05eb&gad_source=4&gclid=Cj0KCQjwxeyxBhC7ARIsAC7dS3-1LV_Z3D8X2qYkkOvjTkqs3m6E1b_Wv2aVTcKi5kV1ffa5ydFy9l0aAoRHEALw_wcB">
+            I am jazz by: Jessica Herthel, Jazz Jennings
+        </a>
+    </li>
+    <li>
+        <a href="https://www.amazon.com/Pink-Boys-Robb-Pearlman/dp/0762475528/ref=asc_df_0762475528/?tag=hyprod-20&linkCode=df0&hvadid=693420028704&hvpos=&hvnetw=g&hvrand=13994383426014531176&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1027855&hvtargid=pla-1016948586213&psc=1&mcid=45974671bb4434759bfc659875149534&gad_source=1&gclid=Cj0KCQjwxeyxBhC7ARIsAC7dS38gdGo0OlYt6OYu50YNW9-Iu_DGVrThx4kJZb8JDxMpCHbJbSBAi5kaAjaHEALw_wcB">
+            Pink is for boys by: Robb Pearlman
+        </a>
+    </li>
+    <li>
+        <a href="https://www.amazon.com/Julián-Mermaid-Jessica-Love/dp/0763690457/ref=pd_rhf_sc_s_pd_sbs_rvi_d_sccl_2_1/130-4333902-1353729?psc=1">
+            Julian is a mermaid by: Jessica Love
+        </a>
+    </li>
+    <li>
+        <a href="https://www.amazon.com/My-Shadow-Purple-Scott-Stuart/dp/1922503819/ref=asc_df_1922503819/?tag=hyprod-20&linkCode=df0&hvadid=693420028704&hvpos=&hvnetw=g&hvrand=13994383426014531176&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1027855&hvtargid=pla-1564720490302&psc=1&mcid=e06f925842e83aa5a915062debd26fbf&gad_source=1&gclid=Cj0KCQjwxeyxBhC7ARIsAC7dS3-lGwGwvyO0BOzk3XbgiJkitrgpHx0bumxc9pnuqoiXA6OTKSND86IaAtJQEALw_wcB">
+            My shadow is Purple by: Scott Stuart
+        </a>
+    </li>
+    <li>
+        <a href="https://www.amazon.com/Sparkle-Boy-Leslea-Newman/dp/1620142856/ref=asc_df_1620142856/?tag=hyprod-20&linkCode=df0&hvadid=693294851223&hvpos=&hvnetw=g&hvrand=13994383426014531176&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1027855&hvtargid=pla-523700290220&psc=1&mcid=91470b4c2a1b3187b39c69aacab59ba6&gad_source=1&gclid=Cj0KCQjwxeyxBhC7ARIsAC7dS38Qs620492e4b9NbwsTd1e76ukImbCFUGpaAuZE0w1Qcfj26E7trd4aAvDaEALw_wcB">
+            Sparkle boy by: Leslea Newman
+        </a>
+    </li>
+</ul>
+
+<h3 id="books_lgbt_families">Lgbt families</h3> 
+
+<ul>
+    <li>
+        <a href="https://www.kcolemanbooks.com/product-page/and-that-s-their-family-paperback">
+            And that’s their family by: Kailee Coleman
+        </a>
+    </li>
+    <li>
+        <a href="https://www.amazon.com/My-Daddys-Belly-Transgender-giving/dp/1916975003/ref=asc_df_1916975003/?tag=hyprod-20&linkCode=df0&hvadid=693450582458&hvpos=&hvnetw=g&hvrand=13994383426014531176&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1027855&hvtargid=pla-2294228226444&psc=1&mcid=c841dbd469663e109434f86226c546f2&gad_source=1&gclid=Cj0KCQjwxeyxBhC7ARIsAC7dS39RdcTp7XKRx8c94OoL0e87G13d_lTYIuRGGSzBjezwiA3LWaRFwdIaAn0-EALw_wcB">
+            In my daddy’s belly by: Logan Brown
+        </a>
+    </li>
+</ul>
