linked and 'styled' periods

--- a/pages/index.html
+++ b/pages/index.html
@@ -22,7 +22,7 @@
                 </li>
             </ol>
             <li>
-            <!-- TODO: those sections don't exist?! -->
+                <!-- TODO: those sections don't exist?! -->
                 <h4 style="margin: 0px;">
                     <a href="./server_guide.html">Resources</a> 
                 </h4>
@@ -71,11 +71,11 @@
                 <li>
                     <!-- TODO: this menu item doesn't make much sense, 
                         in general: an index update would be needed -->
-                    <h5 style="margin: 0px;">
-                        <a href="./social_transitioning.html#vocal_training">
-                            Trans academy voice classes
-                        </a>
-                    </h5>
+                        <h5 style="margin: 0px;">
+                            <a href="./social_transitioning.html#vocal_training">
+                                Trans academy voice classes
+                            </a>
+                        </h5>
                 </li>
                 <li>
                     <h5 style="margin: 0px;">
@@ -330,21 +330,31 @@
         </ol>
     </li>
     <li>
-        <h3 style="margin: 0px;">Periods - monthly cycle</h3>
+        <h3 style="margin: 0px;">
+            <a href="./periods.html">
+                Periods - monthly cycle
+            </a>
+        </h3>
         <ol>
             <li>
                 <h4 style="margin: 0px;">
-                    Period tracking app, OBGYNs
+                    <a href="./periods.html#trans_gynecology">
+                        Period tracking app, OBGYNs
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Trans masc cycles
+                    <a href="./periods.html#trans_masc_periods">
+                        Trans masc cycles
+                    </a>
                 </h4>
             </li>
             <li>
                 <h4 style="margin: 0px;">
-                    Trans fem have periods too!
+                    <a href="./periods.html#trans_fem_periods">
+                        Trans fem have periods too!
+                    </a>
                 </h4>
             </li>
         </ol>
